fixed out of stock state not showing

--- a/src/styles/product-details.scss
+++ b/src/styles/product-details.scss
@@ -204,6 +204,29 @@
                         border: 1px solid $functional-darkest;
                         color: $white;
                     }
+                    .out-of-stock-swatch {
+                        background: $white;
+                        border: 1px solid $functional-light;
+                        color: $functional-dark;
+                        position: relative;
+                        // text-decoration: line-through;
+                        cursor: no-drop;
+                        &:hover, &:active, &:focus {
+                            background: $white;
+                            border: 1px solid $functional-light;
+                            color: $functional-dark;
+                        }
+                        &:after {
+                            position: absolute;
+                            left: 0;
+                            top: 0;
+                            height: 100%;
+                            background: url('../assets/cross.png');
+                            content: "";
+                            width: 100%;
+                            display: block;
+                          }
+                    }
                 }
             }
             .bc-product-card {
